
2007-01-11  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: led_meter.c, xtoxwd.h, led_meter.h, xvidcap-intl.h, 
		gnome_warning.c, gnome_warning.h, xtoffmpeg.c, 
		gnome_ui.c, capture.c, app_data.c, job.c, gnome_frame.c, 
		job.h, gnome_options.c, xv_error_item.c, main.c, 
		gnome_options.h, xv_error_item.h, options.c, xtoxwd.c:
		more code cleanup and doxygenification

2006-10-24  Vincenzo Reale <smart2128@baslug.org>
	* po/it.po: updated Italian translation

2007-01-10  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* configure.in, src: led_meter.c, xtoxwd.h, led_meter.h, control.h, 
		gnome_warning.c, xtoffmpeg.c, gnome_warning.h, gnome_ui.c, 
		capture.c, xtoffmpeg.h, gnome_ui.h, app_data.c, job.c, 
		app_data.h, job.h, gnome_options.c, main.c, options.c, 
		xtoxwd.c: more code cleanup and doxygenification

2007-01-09  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: gnome_ui.c, gnome_options.c, gnome_options.h: more
		code cleanup and doxygenification
	* src/app_data.c: fixed bug where new fps handling was breaking
		the fps for the non-active capture type

2007-01-06  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* configure.in: fixed typo in check for db2x_docbook2man

2007-01-05  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: gnome_ui.c, gnome-xvidcap.glade: fix for bug
		#1623959 (About's Close does not close)
	
2007-01-04  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/*.[ch]: more code cleanup. Made structs more C-like
		used const where applicable, also factional fps
		values are back
	* debian/control: fix for missing scrollkeeper dependency
	* configure.in: fix for detection of Fedora's db2x-docbook2man

2006-12-22  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/*.[ch]: loads of code cleanup, most notably: removed
		redundancies in XVC_XVC_AppData and Job where possible, 
		reduced passing around of Job pointers where xvc_job_ptr
		does the job, started doxygen documentation

2006-12-21  Karl H. Beckers  <karl.h.beckers@gmx.net>