@@ -6,8 +6,10 @@
 		job.h, gnome_options.c, xv_error_item.c, main.c, 
 		gnome_options.h, xv_error_item.h, options.c, xtoxwd.c:
 		more code cleanup and doxygenification
+	* src/gnome_options.c: fixed indentation
+	* Changelog: fixed date for new Italian translation
 
-2006-10-24  Vincenzo Reale <smart2128@baslug.org>
+2007-01-11  Vincenzo Reale <smart2128@baslug.org>
 	* po/it.po: updated Italian translation
 
 2007-01-10  Karl H. Beckers  <karl.h.beckers@gmx.net>
